# Particle_Simulation

./: CMakeLists.txt  Initialization.cpp  Particle_Simulation.cpp  Particle_Simulation.h
Python_Scripts/: CH_Batch.py  CH_Batch.sh  Cahn_Hilliard_Stochastic_Simulation_V4.ipynb  Cahn_Hilliard_Visualization_v4.ipynb  Particle_Data_Loader_json_V2.ipynb  Particle_Data_Loader_json_V2_Average.ipynb  Particle_Position_Visualizer.ipynb  ReadMe.txt
